# BotOx

./: Dockerfile  README.md  createIndex.py  docker-compose.yml  init.sh  pyproject.toml
app/: .env  main.py
app/config/: env.py
app/utils/: logging.py
chroma_db/267c95ee-14b9-479e-b7ff-e3f7fb1dbc6c/: index_metadata.pickle
configs/: logging.yaml
